<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:background="@color/bg_white">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="550dp"
        android:scaleType="fitEnd"
        android:src="@drawable/imagem_login_fundo"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical"


        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/welcome_message"
            android:textAppearance="@style/style_text"
            android:textColor="@color/light_green"
            android:textSize="14sp" />


        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/title_login"
            android:textAppearance="@style/style_title"
            android:textColor="@color/primary"
            android:textFontWeight="900"
            android:textSize="52sp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/black"
            android:fontFamily="@font/roboto"
            android:hint="@string/input_hint_name"
            android:inputType="textEmailAddress"
            android:shadowColor="@color/gray"
            android:textColorHint="@color/gray" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/senha_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/black"
            android:fontFamily="@font/roboto"
            android:hint="@string/input_hint_password"
            android:inputType="numberPassword"
            android:shadowColor="@color/gray"
            android:textColorHint="@color/gray" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/entrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:backgroundTint="@color/secondary"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/button_login"
            android:textSize="24sp"
            app:cornerRadius="50dp" />

        <Button
            android:id="@+id/textButton"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/register_ask"
            android:textAllCaps="false"
            android:textColor="@color/primary"
            android:textSize="14sp" />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>